set(target "sampler")
add_executable(${target} sampler.cpp)
target_link_libraries(${target} PRIVATE FairMQ::FairMQ)
target_compile_features(${target} PRIVATE cxx_std_17)
target_include_directories(${target} PRIVATE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)
set_target_properties(${target} PROPERTIES OUTPUT_NAME "${PROJECT_EXE_NAME_PREFIX}-${target}")
install(TARGETS ${target} RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})

set(target "worker")
add_executable(${target} worker.cpp)
target_link_libraries(${target} PRIVATE FairMQ::FairMQ)
target_compile_features(${target} PRIVATE cxx_std_17)
target_include_directories(${target} PRIVATE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)
set_target_properties(${target} PROPERTIES OUTPUT_NAME "${PROJECT_EXE_NAME_PREFIX}-${target}")
install(TARGETS ${target} RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
